--- a/Projet Septembre/WebContent/style/Style.css
+++ b/Projet Septembre/WebContent/style/Style.css
@@ -7,6 +7,7 @@ Font: Roboto
 */
 * {
 	font-family: Roboto, serif, sans-serif;
+	
 }
 
 .header {
@@ -82,7 +83,7 @@ a {
 }
 
 .signForm {
-	border: 1px solid black;
+	border: 1px solid white;
 	padding-left: 20px;
 	padding-right: 20px;
 	padding-top: 30px;
@@ -92,6 +93,7 @@ a {
 	margin-bottom: 10%;
 	background-color: #FAEBDA;
 }
+
 
 .signTitle {
 	margin-top: 8%;
